scrollbar fix

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,7 +15,7 @@ img {
 
 ::-webkit-scrollbar-track
 {
-	background-color: #EBEBEB;
+	background-color: #d4d4d4;
 }
 
 ::-webkit-scrollbar
